<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sorting_product_bottom_background">

    <TextView
        android:id="@+id/sortTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popularityTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/popularity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/popularityCheck"
        app:layout_constraintStart_toStartOf="@+id/sortTextview"
        app:layout_constraintTop_toTopOf="@+id/sortTextview" />

    <ImageView
        android:id="@+id/popularityCheck"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:visibility="invisible"
        android:src="@drawable/shape"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/popularityTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popularityTextview" />

    <TextView
        android:id="@+id/lowestPriceTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/lowest_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/lowestPriceCheck"
        app:layout_constraintStart_toStartOf="@+id/popularityTextview"
        app:layout_constraintTop_toTopOf="@+id/popularityTextview" />

    <ImageView
        android:id="@+id/lowestPriceCheck"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/shape"
        android:visibility="invisible"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/lowestPriceTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lowestPriceTextview" />

    <TextView
        android:id="@+id/highestPriceTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/highest_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/highestPriceCheck"
        app:layout_constraintStart_toStartOf="@+id/lowestPriceTextview"
        app:layout_constraintTop_toTopOf="@+id/lowestPriceTextview" />

    <ImageView
        android:id="@+id/highestPriceCheck"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/shape"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/highestPriceTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/highestPriceTextview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/submit"
        style="@style/BottomButton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highestPriceTextview" />
</androidx.constraintlayout.widget.ConstraintLayout>