<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.customer.profile.address.AddEditAddressFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/arrow_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="Edit Address"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/whole_layout_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_label"
                style="@style/TextInputLayoutOutlined"
                android:hint="@string/title_edit_address_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_province"
                style="@style/TextInputLayoutDropdown"
                android:hint="@string/title_edit_address_province">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edittext_province"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_district"
                style="@style/TextInputLayoutDropdown"
                android:hint="@string/title_edit_address_district">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edittext_district"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_ward"
                style="@style/TextInputLayoutDropdown"
                android:hint="@string/title_edit_address_ward">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edittext_ward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_street"
                style="@style/TextInputLayoutOutlined"
                android:hint="@string/title_edit_address_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_street"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_set_primary"
                    style="@style/Grocer.BodyTextMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_edit_address_set_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/checkbox_is_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="spread" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_is_primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green_bright"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textview_set_primary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="wrap" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/BottomButton"
            android:text="@string/button_text_edit_profile_save" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/ProgressBar" />
</LinearLayout>